--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -11,6 +11,7 @@ use_directory_urls: true
 
 theme:
   name: material
+  logo: img/spdx-logo-white.png
   palette:
     # Palette toggle for light mode
     - scheme: default
